--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,13 @@
 page-home {
 
+  .text-right {
+    border-radius: 40px;
+    box-shadow: 0 0 25px #3ec900;
+    right: auto;
+  }
+
+  ion-title {
+  }
+
+
 }
