--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -1,3 +1,120 @@
 page-login {
 
+  .background {
+    background-image: url('http://i63.tinypic.com/rmtixi.jpg');
+    /*background-repeat:no-repeat;*/
+    background-position: center center;
+     /* background-size: cover;*/
+  }
+
+  #custom-overlay {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 100000;
+    width:100%;
+    background-color: #002a3e;
+  }
+
+  .flb {
+    background-image: url('http://i63.tinypic.com/rmtixi.jpg');
+    height:100%;
+    width:100%;
+    animation: pulse 1s linear forwards;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .Aligner-item {
+    max-width: 50%;
+  }
+  .Aligner-item--top {
+    align-self: flex-start;
+  }
+  .Aligner-item--bottom {
+    align-self: flex-end;
+  }
+  #custom-overlay img {
+    display: block;
+    margin: 0 auto;
+    width: 50%;
+    height: auto;
+    animation: animation 3100ms linear infinite both;
+    animation-delay: 1s;
+  }
+
+
+
+  .scroll-content {
+    align-content: center;
+    display: flex;
+    flex-direction: column;
+  }
+  ion-card.card {
+    box-shadow: none;
+    background: rgba(0, 0, 0, 0.5);
+    border-radius: 5px;
+  }
+  a, p,
+  ion-card-header.card-header {
+    color: #fff!important;
+  }
+
+  .list > .item-block:first-child {
+    border: medium none;
+  }
+
+  .item {
+    margin-bottom: 10px;
+    background: rgba(255, 255, 255, 0.18);
+    border: medium none;
+
+    .text-input {
+      color: #fff;
+    }
+
+
+    input::-moz-placeholder{
+      color: #fff!important;
+    }
+    input:-moz-placeholder {
+      color: #fff!important;
+    }
+    *:-moz-placeholder{
+      color: #fff!important;
+    }
+    *:-ms-input-placeholder{
+      color: #fff!important;
+    }
+    *::-webkit-input-placeholder{
+      color: #fff!important;
+    }
+
+  }
+
+  .icon {
+    padding-right: 10px;
+  }
+
+  .bottom {
+    bottom: 0;
+  }
+
+  .input-cover {
+    position: static;
+  }
+
+  ion-icon:hover{
+    color: #effdff;
+  }
 }
+
+
+
+.animation-target {
+  -webkit-animation: animation 2800ms linear infinite both;
+  animation: animation 2800ms linear infinite both;
+}
+
